# poker_clubs

./: .dockerignore  .env  .gitignore  APPLE_AUTH_SETUP.md  GOOGLE_AUTH_SETUP.md  IMPLEMENTATION_SUMMARY.md  REFACTORING_PLAN.md  REFACTORING_STATUS.md  RESPONSIVE_LAYOUT_CHANGES.md  TOURNAMENT_IMPLEMENTATION_PLAN.md
backend/: .env  Cargo.toml  README.md  poker.db-shm  poker.db-wal  reset_password.sh  test_api.sh
backend/src/: audit.rs  config.rs  error.rs  lib.rs  main.rs
backend/src/api/: auth.rs  clubs.rs  mod.rs  profile.rs  tables.rs  tournaments.rs
backend/src/auth/: jwt.rs  mod.rs  oauth.rs
backend/src/bot/: evaluate.rs  mod.rs  model.rs  strategy.rs
backend/src/db/: hand_history.rs  mod.rs  models.rs
backend/src/db/migrations/: 001_initial_schema.sql  002_add_variant_and_format.sql  003_tournament_tables.sql  004_add_is_bot_field.sql  004_add_tournament_pre_seat.sql  005_fix_tournament_tables_fk.sql  007_add_balance_constraints.sql  (+5 more)
backend/src/game/: betting.rs  constants.rs  deck.rs  error.rs  format.rs  hand.rs  mod.rs  player.rs  pot.rs  table.rs  variant.rs
backend/src/tournament/: blinds.rs  broadcasts.rs  context.rs  lifecycle.rs  manager.rs  mod.rs  prizes.rs  registration.rs
backend/src/ws/: handler.rs  handler_old.rs  messages.rs  mod.rs  rate_limit.rs
backend/tests/: api_tests.rs  tournament_tests.rs  ws_tests.rs
poker_ai/python/: TRAINING.md  future_improvements.md  pyproject.toml  run_eval.sh
poker_ai/python/scripts/: benchmark_env.py  eval_exploitability.py  evaluate.py  export_onnx.py  milestone_eval.py  train.py  train.sh
poker_ai/python/tests/: test_engine.py  test_network.py
(+99 files in other folders)
