[package]
name = "poker_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework and async runtime
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "migrate"] }

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Randomness for card shuffling
rand = "0.8"
rand_chacha = "0.3"

# Poker hand evaluation
rs_poker = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

[dev-dependencies]
# Testing
axum-test = "16"
tokio-tungstenite = "0.24"
tempfile = "3"
